# jooble

./: .gitignore  README.md  pyproject.toml
notebooks/: Untitled.ipynb  pandas-Copy1.ipynb  preprocessing_dask.ipynb  reference.ipynb
src/: jooble.py  preprocess_vacancy.py
