[tool.poetry]
name = "jooble"
version = "0.1.0"
description = "jooble test task"
authors = ["danilpolkov <danilpolkov14@rambler.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pandas = "^1.0.3"
numpy = "^1.18.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
